comment out notebooks

--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -210,25 +210,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an inversion object\n",
-    "# run the cartesian L2 inversion.\n",
+    "# # Create an inversion object\n",
+    "# # run the cartesian L2 inversion.\n",
     "\n",
-    "update_Jacobi = Directives.UpdatePreconditioner()\n",
-    "update_SensWeight = Directives.UpdateSensitivityWeights()\n",
+    "# update_Jacobi = Directives.UpdatePreconditioner()\n",
+    "# update_SensWeight = Directives.UpdateSensitivityWeights()\n",
     "\n",
-    "beta = Directives.BetaSchedule(coolingFactor=8, coolingRate=3)\n",
-    "betaest = Directives.BetaEstimate_ByEig()\n",
+    "# beta = Directives.BetaSchedule(coolingFactor=8, coolingRate=3)\n",
+    "# betaest = Directives.BetaEstimate_ByEig()\n",
     "\n",
-    "#L2 only\n",
-    "inv = Inversion.BaseInversion(invProb, directiveList=[beta, betaest, update_SensWeight, target, update_Jacobi])\n",
+    "# #L2 only\n",
+    "# inv = Inversion.BaseInversion(invProb, directiveList=[beta, betaest, update_SensWeight, target, update_Jacobi])\n",
     "\n",
     "\n",
-    "prob.counter = opt.counter = Utils.Counter()\n",
-    "opt.LSshorten = 0.5\n",
+    "# prob.counter = opt.counter = Utils.Counter()\n",
+    "# opt.LSshorten = 0.5\n",
     "\n",
-    "m0 = np.ones(actMap.nP*3)*0.  #creates an initial starting model m0\n",
-    "reg.mref = m0\n",
-    "mopt_L2 = inv.run(m0) #mopt is the L2 output model\n"
+    "# m0 = np.ones(actMap.nP*3)*0.  #creates an initial starting model m0\n",
+    "# reg.mref = m0\n",
+    "# mopt_L2 = inv.run(m0) #mopt is the L2 output model\n"
    ]
   },
   {
@@ -237,47 +237,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#############################################\n",
-    "# LAST STEP: Finish inversion with spherical formulation for sparsity\n",
-    "# Lp inversion starts here\n",
-    "# It uses the cartesian L2 model from above as a starting model\n",
-    "############################################\n",
+    "# #############################################\n",
+    "# # LAST STEP: Finish inversion with spherical formulation for sparsity\n",
+    "# # Lp inversion starts here\n",
+    "# # It uses the cartesian L2 model from above as a starting model\n",
+    "# ############################################\n",
     "\n",
-    "#beta = invProb.beta\n",
-    "beta = 1.\n",
+    "# #beta = invProb.beta\n",
+    "# beta = 1.\n",
     "\n",
-    "mstart = Utils.matutils.xyz2atp(mopt_L2)\n",
-    "mref = np.zeros_like(mstart)\n",
+    "# mstart = Utils.matutils.xyz2atp(mopt_L2)\n",
+    "# mref = np.zeros_like(mstart)\n",
     "\n",
-    "prob.coordinate_system = 'spherical'\n",
-    "prob.model = mstart\n",
+    "# prob.coordinate_system = 'spherical'\n",
+    "# prob.model = mstart\n",
     "\n",
-    "# Create a block diagonal regularization\n",
-    "wires = Maps.Wires(('amp', actMap.nP), ('theta', actMap.nP), ('phi', actMap.nP))\n",
+    "# # Create a block diagonal regularization\n",
+    "# wires = Maps.Wires(('amp', actMap.nP), ('theta', actMap.nP), ('phi', actMap.nP))\n",
     "\n",
-    "# Create a regularization\n",
-    "reg_a = Regularization.Sparse(mesh, indActive=actind, mapping=wires.amp)\n",
-    "reg_a.norms = [0, 2, 2, 2]\n",
-    "#reg_a.eps_p = np.percentile(np.abs(mstart[:actMap.nP]), 95)\n",
-    "reg_a.mref = mref\n",
+    "# # Create a regularization\n",
+    "# reg_a = Regularization.Sparse(mesh, indActive=actind, mapping=wires.amp)\n",
+    "# reg_a.norms = [0, 2, 2, 2]\n",
+    "# #reg_a.eps_p = np.percentile(np.abs(mstart[:actMap.nP]), 95)\n",
+    "# reg_a.mref = mref\n",
     "\n",
-    "reg_t = Regularization.Sparse(mesh, indActive=actind, mapping=wires.theta)\n",
-    "reg_t.alpha_s = 0.  # No reference angle\n",
-    "reg_t.coordinate_system = 'spherical'\n",
-    "reg_t.norms = [2, 2, 2, 2] #0,1,1,1\n",
-    "#reg_t.eps_q = 1e-2 # in radians\n",
-    "reg_t.mref = mref\n",
-    "# reg_t.alpha_x, reg_t.alpha_y, reg_t.alpha_z = 0.25, 0.25, 0.25\n",
+    "# reg_t = Regularization.Sparse(mesh, indActive=actind, mapping=wires.theta)\n",
+    "# reg_t.alpha_s = 0.  # No reference angle\n",
+    "# reg_t.coordinate_system = 'spherical'\n",
+    "# reg_t.norms = [2, 2, 2, 2] #0,1,1,1\n",
+    "# #reg_t.eps_q = 1e-2 # in radians\n",
+    "# reg_t.mref = mref\n",
+    "# # reg_t.alpha_x, reg_t.alpha_y, reg_t.alpha_z = 0.25, 0.25, 0.25\n",
     "\n",
-    "reg_p = Regularization.Sparse(mesh, indActive=actind, mapping=wires.phi)\n",
-    "reg_p.alpha_s = 0.  # No reference angle\n",
-    "reg_p.coordinate_system = 'spherical'\n",
-    "reg_p.norms = [2, 2, 2, 2] #0,1,1,1\n",
-    "#reg_p.eps_q = 1e-2 # in radians\n",
-    "reg_p.mref = mref\n",
+    "# reg_p = Regularization.Sparse(mesh, indActive=actind, mapping=wires.phi)\n",
+    "# reg_p.alpha_s = 0.  # No reference angle\n",
+    "# reg_p.coordinate_system = 'spherical'\n",
+    "# reg_p.norms = [2, 2, 2, 2] #0,1,1,1\n",
+    "# #reg_p.eps_q = 1e-2 # in radians\n",
+    "# reg_p.mref = mref\n",
     "\n",
-    "reg = reg_a + reg_t + reg_p\n",
-    "reg.mref = mref\n"
+    "# reg = reg_a + reg_t + reg_p\n",
+    "# reg.mref = mref\n"
    ]
   },
   {
@@ -286,47 +286,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Run Lp inversion\n",
-    "# Data misfit function\n",
-    "dmisfit = DataMisfit.l2_DataMisfit(survey)\n",
+    "# #Run Lp inversion\n",
+    "# # Data misfit function\n",
+    "# dmisfit = DataMisfit.l2_DataMisfit(survey)\n",
     "\n",
-    "Lbound = np.kron(np.asarray([0., -np.inf, -np.inf]), np.ones(actMap.nP))\n",
-    "Ubound = np.kron(np.asarray([np.inf, np.inf, np.inf]), np.ones(actMap.nP))\n",
+    "# Lbound = np.kron(np.asarray([0., -np.inf, -np.inf]), np.ones(actMap.nP))\n",
+    "# Ubound = np.kron(np.asarray([np.inf, np.inf, np.inf]), np.ones(actMap.nP))\n",
     "\n",
-    "# Add directives to the inversion\n",
-    "opt = Optimization.ProjectedGNCG(maxIter=30,\n",
-    "                                 lower=Lbound,\n",
-    "                                 upper=Ubound,\n",
-    "                                 maxIterLS=10,\n",
-    "                                 maxIterCG=20, tolCG=1e-3,\n",
-    "                                 stepOffBoundsFact=1e-8)\n",
-    "#store each iteration\n",
-    "opt.remember('xc')\n",
+    "# # Add directives to the inversion\n",
+    "# opt = Optimization.ProjectedGNCG(maxIter=30,\n",
+    "#                                  lower=Lbound,\n",
+    "#                                  upper=Ubound,\n",
+    "#                                  maxIterLS=10,\n",
+    "#                                  maxIterCG=20, tolCG=1e-3,\n",
+    "#                                  stepOffBoundsFact=1e-8)\n",
+    "# #store each iteration\n",
+    "# opt.remember('xc')\n",
     "\n",
-    "# Here is where the norms are applied\n",
-    "IRLS = Directives.Update_IRLS(f_min_change=1e-4,\n",
-    "                              minGNiter=2, beta_tol=1e-2,\n",
-    "                              coolingRate=3, maxIRLSiter=10)\n",
+    "# # Here is where the norms are applied\n",
+    "# IRLS = Directives.Update_IRLS(f_min_change=1e-4,\n",
+    "#                               minGNiter=2, beta_tol=1e-2,\n",
+    "#                               coolingRate=3, maxIRLSiter=10)\n",
     "\n",
-    "invProb = InvProblem.BaseInvProblem(dmisfit, reg, opt, beta=beta)\n",
+    "# invProb = InvProblem.BaseInvProblem(dmisfit, reg, opt, beta=beta)\n",
     "\n",
-    "# Special directive specific to the spherical problem. The sensitivity\n",
-    "# weights are update between each iteration.\n",
-    "update_SensWeight = Directives.UpdateSensitivityWeights()\n",
+    "# # Special directive specific to the spherical problem. The sensitivity\n",
+    "# # weights are update between each iteration.\n",
+    "# update_SensWeight = Directives.UpdateSensitivityWeights()\n",
     "\n",
-    "ProjSpherical = Directives.ProjSpherical()\n",
+    "# ProjSpherical = Directives.ProjSpherical()\n",
     "\n",
-    "update_Jacobi = Directives.UpdatePreconditioner()\n",
-    "betaest = Directives.BetaEstimate_ByEig(beta0_ratio=0.1)\n",
-    "inv = Inversion.BaseInversion(invProb, directiveList=[ProjSpherical, IRLS, update_SensWeight, update_Jacobi])\n",
+    "# update_Jacobi = Directives.UpdatePreconditioner()\n",
+    "# betaest = Directives.BetaEstimate_ByEig(beta0_ratio=0.1)\n",
+    "# inv = Inversion.BaseInversion(invProb, directiveList=[ProjSpherical, IRLS, update_SensWeight, update_Jacobi])\n",
     "\n",
-    "# #start the inversion\n",
-    "# moptSpherical_Lp = inv.run(mstart)\n",
+    "# # #start the inversion\n",
+    "# # moptSpherical_Lp = inv.run(mstart)\n",
     "\n",
-    "# #recall a specific iteration of the inversion. Start counting at zero!.\n",
-    "# #Comment out if not needed\n",
-    "# xc = opt.recall('xc')\n",
-    "# moptSpherical_Lp = xc[3]\n"
+    "# # #recall a specific iteration of the inversion. Start counting at zero!.\n",
+    "# # #Comment out if not needed\n",
+    "# # xc = opt.recall('xc')\n",
+    "# # moptSpherical_Lp = xc[3]\n"
    ]
   },
   {
