--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -257,14 +257,14 @@
     "\n",
     "# # Create a regularization\n",
     "# reg_a = Regularization.Sparse(mesh, indActive=actind, mapping=wires.amp)\n",
-    "# reg_a.norms = [0, 2, 2, 2]\n",
+    "# reg_a.norms = np.c_[0, 2, 2, 2]\n",
     "# #reg_a.eps_p = np.percentile(np.abs(mstart[:actMap.nP]), 95)\n",
     "# reg_a.mref = mref\n",
     "\n",
     "# reg_t = Regularization.Sparse(mesh, indActive=actind, mapping=wires.theta)\n",
     "# reg_t.alpha_s = 0.  # No reference angle\n",
     "# reg_t.coordinate_system = 'spherical'\n",
-    "# reg_t.norms = [2, 2, 2, 2] #0,1,1,1\n",
+    "# reg_t.norms = np.c_[2, 2, 2, 2] #0,1,1,1\n",
     "# #reg_t.eps_q = 1e-2 # in radians\n",
     "# reg_t.mref = mref\n",
     "# # reg_t.alpha_x, reg_t.alpha_y, reg_t.alpha_z = 0.25, 0.25, 0.25\n",
@@ -272,7 +272,7 @@
     "# reg_p = Regularization.Sparse(mesh, indActive=actind, mapping=wires.phi)\n",
     "# reg_p.alpha_s = 0.  # No reference angle\n",
     "# reg_p.coordinate_system = 'spherical'\n",
-    "# reg_p.norms = [2, 2, 2, 2] #0,1,1,1\n",
+    "# reg_p.norms = np.c_[2, 2, 2, 2] #0,1,1,1\n",
     "# #reg_p.eps_q = 1e-2 # in radians\n",
     "# reg_p.mref = mref\n",
     "\n",
