uncomment for DivJs

--- a/notebooks/DivJs_inversion.ipynb
+++ b/notebooks/DivJs_inversion.ipynb
@@ -213,14 +213,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #run the inversion\n",
-    "# mopt_Lp = inv.run(m0)\n",
-    "# Lp_amp = actMap*mopt_Lp\n",
+    "#run the inversion\n",
+    "mopt_Lp = inv.run(m0)\n",
+    "Lp_amp = actMap*mopt_Lp\n",
     "\n",
-    "# #recall a particular iteration, comment out if not needed.\n",
-    "# xc = opt.recall('xc')\n",
-    "# mopt_Lp = xc[8]\n",
-    "# Lp_amp = actMap*mopt_Lp\n"
+    "#recall a particular iteration, comment out if not needed.\n",
+    "xc = opt.recall('xc')\n",
+    "mopt_Lp = xc[8]\n",
+    "Lp_amp = actMap*mopt_Lp\n"
    ]
   },
   {
@@ -229,17 +229,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #save models and calc data\n",
+    "#save models and calc data\n",
     "\n",
-    "# mesh.writeModelUBC('Tongairo_C_Lp_amp.mod', Lp_amp)\n",
+    "mesh.writeModelUBC('Tongairo_C_Lp_amp.mod', Lp_amp)\n",
     "\n",
-    "# #Write calculated data (Lp model)\n",
-    "# Lp_calculated = survey.dpred(mopt_Lp)\n",
-    "# np.savetxt('Lp_calculated_data.dat', Lp_calculated, fmt='%.4f')\n",
+    "#Write calculated data (Lp model)\n",
+    "Lp_calculated = survey.dpred(mopt_Lp)\n",
+    "np.savetxt('Lp_calculated_data.dat', Lp_calculated, fmt='%.4f')\n",
     "\n",
     "\n",
-    "# RMS = np.sqrt(mse(Lp_calculated, survey.dobs))\n",
-    "# print('RMS = %.3f mV' %RMS)\n"
+    "RMS = np.sqrt(mse(Lp_calculated, survey.dobs))\n",
+    "print('RMS = %.3f mV' %RMS)\n"
    ]
   },
   {
@@ -248,21 +248,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Plot some L2 model obs and calc\n",
-    "# plt.figure()\n",
-    "# plt.plot(survey.dobs, '.', label = 'obs')\n",
-    "# plt.plot(invProb.dpred, label = 'calc')\n",
-    "# plt.legend()\n",
-    "# plt.ylabel('mV')\n",
-    "# plt.xlabel('data point index')\n",
-    "# plt.annotate('B', xy=(0, 1000), fontsize=14)\n",
-    "# plt.title('$q$ observed vs calculated.  RMS = %.0f mV' %RMS)\n",
-    "# plt.show()\n",
+    "# Plot some L2 model obs and calc\n",
+    "plt.figure()\n",
+    "plt.plot(survey.dobs, '.', label = 'obs')\n",
+    "plt.plot(invProb.dpred, label = 'calc')\n",
+    "plt.legend()\n",
+    "plt.ylabel('mV')\n",
+    "plt.xlabel('data point index')\n",
+    "plt.annotate('B', xy=(0, 1000), fontsize=14)\n",
+    "plt.title('$q$ observed vs calculated.  RMS = %.0f mV' %RMS)\n",
+    "plt.show()\n",
     "\n",
-    "# plt.figure()\n",
-    "# plt.hist(mopt_Lp, bins=100, label='Lp model')\n",
-    "# plt.legend()\n",
-    "# plt.show()\n",
+    "plt.figure()\n",
+    "plt.hist(mopt_Lp, bins=100, label='Lp model')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
     "\n",
     "\n"
    ]
@@ -273,22 +273,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # extract core mesh\n",
-    "# temp = Lp_amp.copy()\n",
-    "# temp[~actind] = np.nan\n",
-    "# vmin, vmax = temp[actind].min(), temp[actind].max()\n",
+    "# extract core mesh\n",
+    "temp = Lp_amp.copy()\n",
+    "temp[~actind] = np.nan\n",
+    "vmin, vmax = temp[actind].min(), temp[actind].max()\n",
     "\n",
-    "# xmin, xmax = dataInv[:,0].min(), dataInv[:,0].max()\n",
-    "# ymin, ymax = dataInv[:,1].min(), dataInv[:,1].max()\n",
-    "# zmin, zmax = 700, topo[:,2].max()\n",
-    "# xyzlim = np.array([[xmin, xmax], [ymin, ymax], [zmin, zmax]])\n",
-    "# ind_core, mesh_core = Utils.ExtractCoreMesh(xyzlim, mesh)\n",
+    "xmin, xmax = dataInv[:,0].min(), dataInv[:,0].max()\n",
+    "ymin, ymax = dataInv[:,1].min(), dataInv[:,1].max()\n",
+    "zmin, zmax = 700, topo[:,2].max()\n",
+    "xyzlim = np.array([[xmin, xmax], [ymin, ymax], [zmin, zmax]])\n",
+    "ind_core, mesh_core = Utils.ExtractCoreMesh(xyzlim, mesh)\n",
     "\n",
-    "# ja_est_core = Utils.mkvc(temp[ind_core])\n",
-    "# actind_core = actind[ind_core]\n",
-    "# jamp_min, jamp_max = ja_est_core[:mesh_core.nC][actind_core].min(), ja_est_core[:mesh_core.nC][actind_core].max()\n",
-    "# jamp_lp_core = temp[ind_core]\n",
-    "# jamp_lp_core[~actind_core] = np.nan\n"
+    "ja_est_core = Utils.mkvc(temp[ind_core])\n",
+    "actind_core = actind[ind_core]\n",
+    "jamp_min, jamp_max = ja_est_core[:mesh_core.nC][actind_core].min(), ja_est_core[:mesh_core.nC][actind_core].max()\n",
+    "jamp_lp_core = temp[ind_core]\n",
+    "jamp_lp_core[~actind_core] = np.nan\n"
    ]
   },
   {
@@ -297,45 +297,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # plot map views\n",
-    "# fig, ((ax0,ax1),(ax2,ax3)) = plt.subplots(nrows=2, ncols=2, figsize = (10, 10))\n",
+    "# plot map views\n",
+    "fig, ((ax0,ax1),(ax2,ax3)) = plt.subplots(nrows=2, ncols=2, figsize = (10, 10))\n",
     "\n",
-    "# fig.subplots_adjust(wspace=0, hspace=0)\n",
-    "# axs = [ax0, ax1, ax2, ax3]\n",
-    "# layers = [1500, 1200, 1000, 800]\n",
+    "fig.subplots_adjust(wspace=0, hspace=0)\n",
+    "axs = [ax0, ax1, ax2, ax3]\n",
+    "layers = [1500, 1200, 1000, 800]\n",
     "\n",
     "\n",
-    "# clim=(-0.00005, 0.00005)\n",
-    "# for i_layer, ax in enumerate(axs):   \n",
-    "#     jamp_lp_core[~actind_core] = np.nan\n",
-    "#     indz = int(np.argmin(abs(mesh_core.vectorCCz-layers[i_layer])))\n",
-    "#     cbar = mesh_core.plotSlice(jamp_lp_core, ind=indz, normal='Z', clim=clim, ax=ax)\n",
+    "clim=(-0.00005, 0.00005)\n",
+    "for i_layer, ax in enumerate(axs):   \n",
+    "    jamp_lp_core[~actind_core] = np.nan\n",
+    "    indz = int(np.argmin(abs(mesh_core.vectorCCz-layers[i_layer])))\n",
+    "    cbar = mesh_core.plotSlice(jamp_lp_core, ind=indz, normal='Z', clim=clim, ax=ax)\n",
     "    \n",
-    "#     minorLocator = AutoMinorLocator(4)\n",
-    "#     ax.xaxis.set_minor_locator(minorLocator)\n",
-    "#     ax.yaxis.set_minor_locator(minorLocator)\n",
+    "    minorLocator = AutoMinorLocator(4)\n",
+    "    ax.xaxis.set_minor_locator(minorLocator)\n",
+    "    ax.yaxis.set_minor_locator(minorLocator)\n",
     "\n",
-    "#     ax.tick_params(which='both', width=2, direction='in')\n",
-    "#     ax.tick_params(which='major', length=10, direction='in', top= True, right=True)\n",
-    "#     ax.tick_params(which='minor', length=7, direction='in', top = True)\n",
+    "    ax.tick_params(which='both', width=2, direction='in')\n",
+    "    ax.tick_params(which='major', length=10, direction='in', top= True, right=True)\n",
+    "    ax.tick_params(which='minor', length=7, direction='in', top = True)\n",
     "    \n",
-    "#     ax.set_title('')\n",
-    "#     ax.set_xlabel('')\n",
-    "#     ax.set_ylabel('')\n",
-    "#     ax.set_aspect('equal')\n",
-    "#     ax.set_ylim(5663000, 5669000)\n",
-    "#     ax.set_xlim(1825094, 1831794)    \n",
-    "#     ax.set_title((\"%.0f\")%(layers[i_layer]))\n",
-    "#     ax.set_xticks(np.arange(1826000, 1832000, 2000))\n",
-    "#     ax.set_yticks(np.arange(5663000, 5670000, 2000))\n",
+    "    ax.set_title('')\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_aspect('equal')\n",
+    "    ax.set_ylim(5663000, 5669000)\n",
+    "    ax.set_xlim(1825094, 1831794)    \n",
+    "    ax.set_title((\"%.0f\")%(layers[i_layer]))\n",
+    "    ax.set_xticks(np.arange(1826000, 1832000, 2000))\n",
+    "    ax.set_yticks(np.arange(5663000, 5670000, 2000))\n",
     "    \n",
-    "#     if ~np.logical_or(i_layer==2,i_layer==3):\n",
-    "#         ax.set_xticklabels([])\n",
-    "#     if np.logical_or(i_layer==1,i_layer==3):\n",
-    "#         ax.set_yticklabels({})\n",
+    "    if ~np.logical_or(i_layer==2,i_layer==3):\n",
+    "        ax.set_xticklabels([])\n",
+    "    if np.logical_or(i_layer==1,i_layer==3):\n",
+    "        ax.set_yticklabels({})\n",
     "\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()\n"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -344,47 +344,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # plot section views\n",
-    "# fig, ((ax0,ax1),(ax2,ax3),(ax4,ax5)) = plt.subplots(nrows=3, ncols=2, figsize = (10, 10))\n",
+    "# plot section views\n",
+    "fig, ((ax0,ax1),(ax2,ax3),(ax4,ax5)) = plt.subplots(nrows=3, ncols=2, figsize = (10, 10))\n",
     "\n",
-    "# fig.delaxes(ax5)\n",
+    "fig.delaxes(ax5)\n",
     "\n",
-    "# fig.subplots_adjust(wspace=0, hspace=0)\n",
-    "# axs = [ax0, ax1, ax2, ax3, ax4, ax5]\n",
-    "# layers = [5667994, 5666994, 5665994, 5664994, 5663994]\n",
+    "fig.subplots_adjust(wspace=0, hspace=0)\n",
+    "axs = [ax0, ax1, ax2, ax3, ax4, ax5]\n",
+    "layers = [5667994, 5666994, 5665994, 5664994, 5663994]\n",
     "\n",
-    "# stream_color = 'k'\n",
-    "# clim = (-0.00005, 0.00005)\n",
-    "# for i_layer, ax in enumerate(axs[:-1]):\n",
-    "#     jamp_lp_core[~actind_core] = np.nan\n",
-    "#     indy = int(np.argmin(abs(mesh_core.vectorCCy-layers[i_layer])))\n",
-    "#     cbar = mesh_core.plotSlice(jamp_lp_core, ind=indy, normal='Y', clim=clim, ax=ax)\n",
+    "stream_color = 'k'\n",
+    "clim = (-0.00005, 0.00005)\n",
+    "for i_layer, ax in enumerate(axs[:-1]):\n",
+    "    jamp_lp_core[~actind_core] = np.nan\n",
+    "    indy = int(np.argmin(abs(mesh_core.vectorCCy-layers[i_layer])))\n",
+    "    cbar = mesh_core.plotSlice(jamp_lp_core, ind=indy, normal='Y', clim=clim, ax=ax)\n",
     "\n",
-    "#     minorLocator = AutoMinorLocator(4)\n",
-    "#     ax.xaxis.set_minor_locator(minorLocator)\n",
-    "#     ax.yaxis.set_minor_locator(minorLocator)\n",
+    "    minorLocator = AutoMinorLocator(4)\n",
+    "    ax.xaxis.set_minor_locator(minorLocator)\n",
+    "    ax.yaxis.set_minor_locator(minorLocator)\n",
     "\n",
-    "#     ax.tick_params(which='both', width=2, direction='in')\n",
-    "#     ax.tick_params(which='major', length=10, direction='in', top= True, right=True)\n",
-    "#     ax.tick_params(which='minor', length=7, direction='in', top = True)\n",
+    "    ax.tick_params(which='both', width=2, direction='in')\n",
+    "    ax.tick_params(which='major', length=10, direction='in', top= True, right=True)\n",
+    "    ax.tick_params(which='minor', length=7, direction='in', top = True)\n",
     "    \n",
-    "#     ax.set_title('')\n",
-    "#     ax.set_xlabel('')\n",
-    "#     ax.set_ylabel('')\n",
-    "#     ax.set_aspect('equal')\n",
-    "#     ax.set_ylim(700, 2000)\n",
-    "#     ax.set_xlim(1825094, 1831794)    \n",
-    "#     ax.set_title((\"%.0f\")%(layers[i_layer]))\n",
-    "#     ax.set_xticks([1826000, 1828000, 1830000])\n",
-    "#     ax.set_yticks([1000, 1500, 2000])\n",
+    "    ax.set_title('')\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_aspect('equal')\n",
+    "    ax.set_ylim(700, 2000)\n",
+    "    ax.set_xlim(1825094, 1831794)    \n",
+    "    ax.set_title((\"%.0f\")%(layers[i_layer]))\n",
+    "    ax.set_xticks([1826000, 1828000, 1830000])\n",
+    "    ax.set_yticks([1000, 1500, 2000])\n",
     "      \n",
-    "#     if ~np.logical_or(i_layer==4,i_layer==3) :\n",
-    "#         ax.set_xticklabels([])\n",
-    "#     if np.logical_or(i_layer==1,i_layer==3):\n",
-    "#         ax.set_yticklabels({})\n",
+    "    if ~np.logical_or(i_layer==4,i_layer==3) :\n",
+    "        ax.set_xticklabels([])\n",
+    "    if np.logical_or(i_layer==1,i_layer==3):\n",
+    "        ax.set_yticklabels({})\n",
     "\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n"
    ]
   },
@@ -394,11 +394,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Write core of the L2 model to file in spherical formulation\n",
-    "# mesh_core.writeUBC('mesh_core.msh')\n",
+    "# Write core of the L2 model to file in spherical formulation\n",
+    "mesh_core.writeUBC('mesh_core.msh')\n",
     "\n",
-    "# jamp_lp_core[~actind_core] = -100\n",
-    "# mesh_core.writeModelUBC('Tongairo_C_Lp_amp_core.mod', jamp_lp_core)"
+    "jamp_lp_core[~actind_core] = -100\n",
+    "mesh_core.writeModelUBC('Tongairo_C_Lp_amp_core.mod', jamp_lp_core)"
    ]
   }
  ],
