--- a/notebooks/DivJs_inversion.ipynb
+++ b/notebooks/DivJs_inversion.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "https://github.com/simpeg\n",
     "\n",
-    "please use the SP_spherical branch\n",
+    "please use the miller_2018_tongariro branch\n",
     "\n",
     "\"\"\"\n",
     "from SimPEG import Utils, Maps, Mesh\n",
