--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "https://github.com/simpeg\n",
     "\n",
-    "please use the miller_2018_tongariro branch\n",
+    "please use the miller_tongariro_2018 branch\n",
     "\n",
     "'''\n",
     "\n",
