--- a/notebooks/DivJs_inversion.ipynb
+++ b/notebooks/DivJs_inversion.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "reg.alpha_s = 1\n",
     "\n",
-    "reg.norms = np.c_[0, 1, 1, 1]\n",
+    "reg.norms = [0, 1, 1, 1]\n",
     "\n",
     "opt = Optimization.ProjectedGNCG(maxIter=100, maxIterCG=10, tolX=1e-20, tolF=1e-20)\n",
     "\n",
