--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "https://github.com/simpeg\n",
     "\n",
-    "please use the SP_spherical branch.  32Gb ram are recommended to run the model.\n",
+    "please use the miller_tongariro_2018 branch.  32Gb ram are recommended to run the model.\n",
     "\n",
     "'''\n",
     "\n",
