--- a/notebooks/DivJs_inversion.ipynb
+++ b/notebooks/DivJs_inversion.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "https://github.com/simpeg\n",
     "\n",
-    "please use the miller_tongariro_2018 branch\n",
+    "Please use the miller_tongariro_2018 branch.  32Gb ram are recommended to run the model.\n",
     "\n",
     "\"\"\"\n",
     "from SimPEG import Utils, Maps, Mesh\n",
