--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -47,7 +47,7 @@
     "tar.extractall()\n",
     "tar.close()\n",
     "\n",
-    "datadir =\"./\"\n",
+    "datadir =\"./miller_et_al_2018/\"\n",
     "\n",
     "plt.close('all')"
    ]
