--- a/notebooks/Js_inversion.ipynb
+++ b/notebooks/Js_inversion.ipynb
@@ -481,8 +481,8 @@
     "plt.xlabel('data point index')\n",
     "plt.annotate('A', xy=(0, 1000),fontsize=14)\n",
     "plt.title('$J_s$ observed vs calculated.  RMS = %.0f mV' %RMS)\n",
-    "plt.savefig('D:\\Dropbox\\phd\\Writing\\SP_paper\\working\\Supporting_information\\Figures\\Js_Obs_vs_calc.png')\n",
-    "plt.savefig('D:\\Dropbox\\phd\\Writing\\SP_paper\\working\\Supporting_information\\Figures\\Js_Obs_vs_calc.eps')\n",
+    "plt.savefig(datadir + 'Js_Obs_vs_calc.png')\n",
+    "plt.savefig(datadir + 'Js_Obs_vs_calc.eps')\n",
     "\n",
     "plt.figure()\n",
     "plt.hist(moptSpherical_Lp, bins=100, label='Lp model')\n",
@@ -642,11 +642,11 @@
     "mesh_core.writeUBC('mesh_core.msh')\n",
     "model_vec = j_spherical_lp_core.reshape((mesh_core.nC, 3), order='F')\n",
     "model_vec[~actind_core, :]=-100\n",
-    "SP.Utils.writeVectorUBC(mesh_core, 'Tongairo_S_LP_core.fld', model_vec)\n",
+    "SP.Utils.writeVectorUBC(mesh_core, datadir + 'Tongairo_S_LP_core.fld', model_vec)\n",
     "\n",
     "jamp_lp_core = j_amp[ind_core]\n",
     "jamp_lp_core[~actind_core] = -100\n",
-    "mesh_core.writeModelUBC('Tongairo_S_LP_amp_core.mod', jamp_lp_core)\n"
+    "mesh_core.writeModelUBC(datadir + 'Tongairo_S_LP_amp_core.mod', jamp_lp_core)\n"
    ]
   }
  ],
